--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Elate &mdash; 100% Free Fully Responsive HTML5 Template</title>
+	<title>Elate &mdash; Transpormex </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="keywords" content="Transpormex" />
 	<meta name="author" content="FREEHTML5.CO" />
 
   <!-- 
@@ -221,7 +221,7 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
 							<h1 class="to-animate">Do Only What You Love.</h1>
-							<h2 class="to-animate">Elate is a Free HTML5 Bootstrap Template Released Under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons 3.0</a></h2>
+							<h2 class="to-animate">Transpormex <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons 3.0</a></h2>
 						</div>
 					</div>
 				</div>
