--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Elate &mdash; Transpormex </title>
+	<title>Transpormex &mdash; Transpormex </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
+	<meta name="description" content="Pagina Transpormex" />
 	<meta name="keywords" content="Transpormex" />
 	<meta name="author" content="FREEHTML5.CO" />
 
